--- a/src/components/ProductCard.astro
+++ b/src/components/ProductCard.astro
@@ -1,14 +1,20 @@
 ---
 import "../css/style.css";
-const {card} = Astro.props;
+const {klodsnummer} = Astro.props;
+const {type} = Astro.props;
+const {farve} = Astro.props;
+const {stud} = Astro.props;
+const {img} = Astro.props;
+const {pris} = Astro.props;
 ---
 
-<a class="card_link" href={`product/${card.klodsnummer}`}>
+<a class="card_link" href={`product/${klodsnummer}`}>
     <article class="card_flex">
-        <img src={card.img} alt="Legoklods">
-        <span class="text_flex"><p class="bold">Lego type:</p> <p>{card.type} {card.stud}</p></span>
-        <span class="text_flex"><p class="bold">Klodsnummer:</p> <p>{card.klodsnummer}</p></span>
-        <span class="text_flex"><p class="bold">Farve:</p> <p>{card.farve}</p></span>
+        <img src={img} alt="Legoklods">
+        <span class="text_flex"><p class="bold">Pris:</p> <p>{pris}</p></span>
+        <span class="text_flex"><p class="bold">Lego type:</p> <p>{type} {stud}</p></span>
+        <span class="text_flex"><p class="bold">Klodsnummer:</p> <p>{klodsnummer}</p></span>
+        <span class="text_flex"><p class="bold">Farve:</p> <p>{farve}</p></span>
         <button class="se_mere_bt">SE MERE</button>
     </article>
 </a>
