--- a/src/pages/about_us.astro
+++ b/src/pages/about_us.astro
@@ -37,7 +37,7 @@ import TextBoxAboutUs from "../components/TextBoxAboutUs.astro";
 
 <style>
 section {
-    padding: 0 20px;
+    margin: 0 20px;
 }
 .grid_3-1{
     display: none:
@@ -64,6 +64,10 @@ section {
 
 
 @media screen and (min-width: 1000px){
+
+    section {
+    margin: 0 30px;
+    }
     #red_legomand2{
         min-width:300px;
     }
