--- a/src/components/DonateSell_Indhold.astro
+++ b/src/components/DonateSell_Indhold.astro
@@ -22,4 +22,10 @@ const {title, p1, p2, p3, p4, p5} = Astro.props;
     h3{
         margin-top: 20px;
     }
+
+    @media screen and (min-width: 1000px){
+        .DonateSell_Indhold{
+            max-width:600px;
+        }
+    }
 </style>
