--- a/src/css/style.css
+++ b/src/css/style.css
@@ -61,3 +61,13 @@ body {
 button {
   font-family: var(--system-ui);
 }
+
+@media screen and (min-width: 1000px){
+
+  h2{
+    font-size: 90px;
+  }
+  p{
+    font-size: 16px;
+  }
+}
