some small updates

--- a/src/components/PlusMinusButtons.astro
+++ b/src/components/PlusMinusButtons.astro
@@ -2,7 +2,7 @@
 import "../css/style.css";
 const {text} = Astro.props
 ---
-<button> 
+<button class=""> 
     {text}
 </button>
 
@@ -38,3 +38,5 @@ button:hover{
     }
 }
 </style>
+
+<script src="../js/script.js"></script>
