--- a/src/components/AddToBasket.astro
+++ b/src/components/AddToBasket.astro
@@ -1,9 +1,12 @@
 ---
 import "../css/style.css";
-import PlusMinusButtons from "../components/PlusMinusButtons.astro";
 ---
 
-<span><div class="minus"><PlusMinusButtons text="-"/></div><div id="number"></div><div class="plus"><PlusMinusButtons text="+"/></div></span>
+<span>
+    <button id="minus">-</button>
+    <div id="number"></div>
+    <button id="plus">+</button>
+</span>
 
 <style>
 
@@ -18,6 +21,38 @@ span{
     color: var(--font_color);
     font-family: var(--system-ui);
     font-size: 35px;
+}
+
+
+button{
+    color:var(--font_color);
+    background-color: var(--button_red);
+    width: 48px;
+    height: 44px;
+    font-size: 24px;
+    cursor: pointer;
+    border-radius: 5px;
+    border:none;
+}
+
+button:hover{
+    color:var(--font_color);
+    background-color: var(--footer_color);
+    border:2px solid var(--button_red);
+}
+
+@media screen and (min-width: 1000px){
+    button{
+        width: 52px;
+        height: 48px;
+        font-size: 28px;
+    }
+
+    button:hover{
+        width: 52px;
+        height: 48px;
+        font-size: 28px;
+    }
 }
 
 </style>
