--- a/src/components/ConceptGrid.astro
+++ b/src/components/ConceptGrid.astro
@@ -2,33 +2,24 @@
 import "../css/style.css";
 ---
 
-<div class="grid_1-1">
-    <div>
-        <p>Ideen til OneBrik er skabt ud fra en vision om, at legoklodser skal være en allemandseje. Ud fra denne vision skabte vi et bæredygtigt koncept, hvor legoklodsens cyklus er i fokus. </p>
-    </div>
-    <div>
-        <img src="../public/img-figur/legofigur.svg" alt="legofigur">
-    </div>
-</div>
+   
+<img src="../public/img-figur/legofigur.svg" alt="legofigur">
+
+
 
 <style>
-    .grid_1-1{
-        display: flex;
-        grid-template-columns: 1fr 1fr;
-        margin: 20px; 
+img{ 
+   padding-top: 130px;
+   margin-left: -20px;
     }
 
     @media (min-width: 1000px){
-        p{
-            margin: 50px;
-            margin-right: 60px;
-            font-size: 22px;
-        }
         img{ 
             width: 530px;
             height: 1301px; 
-            margin-top: -500px;
-            margin-right: 70px;
+            margin-top: -400px;
+            margin-bottom: -450px;
+            margin-left: 100px;
         }
     }
 </style>
