--- a/src/components/Process.astro
+++ b/src/components/Process.astro
@@ -17,50 +17,52 @@ const {img, header, text} = Astro.props;
         display: grid;
         grid-template-columns: 1fr 1fr;
         margin-top: 20px;
-        padding-bottom: 30px;
+        padding-bottom: 0px;
+        margin-right: 20px;
     }
 
     .img {
         margin-left: 40px;
         margin-top: 45px;
-
     }
 
     img{
-        max-width: 50%;
+        max-width: 100%;
         height: 80px;
         margin-top: -30px;
     }
     .text{
-        margin-right: 30px;
-        margin-left: -60px;
+        margin-left: -30px;
         margin-top: 0px;
+        font-size: 14px;
         font-family: var(--system-ui);
         color: var( --font_color);
     }
 
-    .text p {
-        margin-top: 10px;
+    h2{
+        font-size: 22px;
     }
 
     @media (min-width: 1000px){
+        .grid_1-1{
+        display: flex;
+        grid-template-columns: 1fr 1fr;
+        justify-content: flex-start;
+    }
         .img {
-            margin-left: 70px;
-            margin-top: 20px;
+            margin-top: 0px;
     }
 
     img{
-        max-width: 50%;
+        max-width: 100%;
         height: 120px;
-        margin-top: -40px;
     }
     .text{
-        margin-right: 30px;
-        margin-left: -500px;
-        margin-top: -20px;
         font-family: var(--system-ui);
         font-size: 22px;
         color: var( --font_color);
+        margin-left: 30px;
+        margin-top: -20px;
     }
     }
 
