--- a/src/components/Process.astro
+++ b/src/components/Process.astro
@@ -48,6 +48,7 @@ const {img, header, text} = Astro.props;
         display: flex;
         grid-template-columns: 1fr 1fr;
         justify-content: flex-start;
+        padding-bottom: 30px;
     }
         .img {
             margin-top: 0px;
@@ -59,10 +60,17 @@ const {img, header, text} = Astro.props;
     }
     .text{
         font-family: var(--system-ui);
-        font-size: 22px;
         color: var( --font_color);
         margin-left: 30px;
         margin-top: -20px;
+    }
+
+    h2 {
+        font-size: 30px;
+    }
+
+    p {
+        font-size: 22px;
     }
     }
 
