--- a/src/pages/product/[Klodsnummer].astro
+++ b/src/pages/product/[Klodsnummer].astro
@@ -2,7 +2,7 @@
 import "../../css/style.css";
 import Mainlayout from "../../layouts/Mainlayout.astro";
 import HomeExplorebuttons from "../../components/HomeExplorebuttons.astro";
-import AddToBasket from "../../components/addToBasket.astro";
+import AddToBasket from "../../components/AddToBasket.astro";
 
 export async function getStaticPaths() {
     const data = await fetch("https://zalgeaakczgvvabyukxy.supabase.co/rest/v1/onebrick", {
