add klodsnummer page

--- a/src/pages/product/{klodsnummer}.astro
+++ b/src/pages/product/{klodsnummer}.astro
@@ -23,7 +23,7 @@ const {product} = Astro.props;
 console.log(product);
 ---
 
-<Mainlayout title={`Klodsnummer ${product.klodsnummer}`}>
+<Mainlayout title={`klodsnummer ${product.klodsnummer}`}>
     <div class="back_button"><HomeExplorebuttons href_text="../productlist" text="TILBAGE"/></div>
     <article class="block">
         <section class="grid_product">
