--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -7,7 +7,7 @@ import "../css/style.css";
         <p class="fat_font p_banner">LEVERING</p>
         <p class="p_banner">1-5 HVERDAGE</p>
     </div>
-    <img src="../../public/nav_middel_line.svg" alt="">
+    <img src="/nav_middel_line.svg" alt="">
     <div class="flex_small">
         <p class="fat_font p_banner">GRATIS FRAGT</p>
         <p class="p_banner">OVER 500 KR.</p>
