--- a/src/components/ConceptGrid.astro
+++ b/src/components/ConceptGrid.astro
@@ -3,7 +3,7 @@ import "../css/style.css";
 ---
 
    
-<img src="../public/img-figur/legofigur.svg" alt="legofigur">
+<img src="/img-figur/legofigur.svg" alt="legofigur">
 
 
 
