--- a/src/components/Delivery.astro
+++ b/src/components/Delivery.astro
@@ -10,7 +10,7 @@
 </div>
 
 <div class="streg">
-    <img src="../Public/img-figur/lodret.svg" alt="Lodret streg">
+    <img src="/img-figur/lodret.svg" alt="Lodret streg">
 </div>
 
 <div class="fragt">
