--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -3,13 +3,13 @@ import "../css/style.css";
 ---
 
 <article class="header_nav">
-    <a href="/"><img class="logo_desk" src="../../public/logo_desk_version.svg" alt="One Brick computer logo"></a>
+    <a href="/"><img class="logo_desk" src="/logo_desk_version.svg" alt="One Brick computer logo"></a>
     <a class="nav_link" href="/productlist">PRODUKTER</a>
     <a class="nav_link" href="/donate_sell">DONER/SÆLG</a>
     <a class="nav_link" href="/concept">VORES KONCEPT</a>
     <a class="nav_link" href="/about_us">OM OS</a>
     <div class="burger_and_basket">
-        <img class="kurv" src="../../public/kurv.svg" alt="kurv icon">
+        <img class="kurv" src="/kurv.svg" alt="kurv icon">
         <div class="burger_menu_icon">
             <span class="menu_lines_1"></span>
             <span class="menu_lines_2"></span>
