--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ import ImgBox from "../components/ImgBox.astro";
 </section>
 
 <div class="billeder">
-<img class="forside" src="../Public/img-figur/forside.svg">
+<img class="forside" src="/img-figur/forside.svg">
 </div>
 
 <Delivery/>
@@ -29,7 +29,7 @@ import ImgBox from "../components/ImgBox.astro";
 
 <div class="sælgBox">
     <div class="imgBox1">
-        <ImgBox img="../Public/img-figur/Legobrik.svg" alt="Legoklods med 1 dut"/>
+        <ImgBox img="/img-figur/Legobrik.svg" alt="Legoklods med 1 dut"/>
      </div>
 
     <div class="box1">
@@ -45,7 +45,7 @@ import ImgBox from "../components/ImgBox.astro";
     </div>
 
     <div class="imgBox2">
-        <ImgBox img="../Public/img-figur/klods2.svg" alt="Legoklods med 2 dutter"/>
+        <ImgBox img="/img-figur/klods2.svg" alt="Legoklods med 2 dutter"/>
     </div>
 </div>
 
